# vezzo

./: CHANGELOG.md  README.md  pyproject.toml  release.sh
example/: config.yaml  example1.py
src/vezzo/: __init__.py
tests/: conftest.py  test-config-fail.yaml  test-config-pass.yaml  test_vezzo.py  version-strings.yaml
