[tool.poetry]
name = "vezzo"
version = "0.1.0"
description = ""
authors = ["Anders Goncalves da Silva <andersgs@gmail.com>"]
readme = "README.md"
packages = [{ include = "vezzo", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
semver = "^2.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
isort = "^5.12.0"
pylint = "^2.16.2"
pyyaml = "^6.0"
pytest-assume = "^2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
